switched all images to cloudinary and replaced image_tag with cl_image_tag

--- a/app/views/accounts/public_profile.html.haml
+++ b/app/views/accounts/public_profile.html.haml
@@ -9,7 +9,7 @@
       .control-group
         %label.control-label Profile Photo
         .controls
-          = image_tag @member.profile_pic, class: "photo pull-left", alt: "", width: 82
+          = cl_image_tag(@member.profile_pic, :width => 82, :height => 82, :crop => :fill, :class => 'pull-left photo')
           .btn-file
             %a.btn.btn-grey{href: "#"}
               %span CHOOSE FILE
