--- a/app/views/communities/leaderboard.html.erb
+++ b/app/views/communities/leaderboard.html.erb
@@ -15,7 +15,8 @@
                 <div class="title" style="margin:0px 0px 0px 0px"><h1>POINTS</h1></div>
           <% @points_leaderboard.each do |member| %>
           <div class="placement well">
-              <%= image_tag(member['profile_pic'], :width => '82x82', :class => 'pull-left photo') %>
+              <%= cl_image_tag(member['profile_pic'], :width => 82, :height => 82, :crop => :fill, 
+                :class => 'pull-left photo', :alt => member['username'], :cdn_subdomain => true) %>
               <%= link_to member['username'], member_path(member['username']), :style => 'margin-top:10px' %>
               <% if member['country'] %><%= member['country'] %><br/><% end %>
               <%= member['points'] %> points<br/>
@@ -33,7 +34,8 @@
                 <div class="title" style="margin:0px 0px 0px 0px"><h1>REFERRALS</h1></div>
                 <% @referral_leaderboard.each do |member| %>
                 <div class="placement well">
-                    <%= image_tag(member['profile_pic'], :width => '82x82', :class => 'pull-left photo') %>
+                    <%= cl_image_tag(member['profile_pic'], :width => 82, :height => 82, :crop => :fill, 
+                      :class => 'pull-left photo', :alt => member['username'], :cdn_subdomain => true) %>                    
                     <%= link_to member['name'], member_path(member['name']), :style => 'margin-top:10px' %>
                     # of Referrals: <%= member['total'].to_i %>
                     <span class="place <%= leaderboard_place_decorator(member['rank'].to_i) %>"><%= member['rank'].to_i.ordinalize %></span>
