--- a/app/views/admin/blog_fodder.html.erb
+++ b/app/views/admin/blog_fodder.html.erb
@@ -9,7 +9,8 @@
     <div class="row-fluid">
     	<% for s in scorecard_row %>
         <div class="placement well well-large span6">
-            <%= image_tag(s.member.profile_pic, :width => '82x82', :class => 'pull-left photo') %>
+            <%= cl_image_tag(s.member.profile_pic, :width => 82, :height => 82, :crop => :fill, 
+              :class => 'pull-left photo', :cdn_subdomain => true) %> 
             <%= link_to s.member.name, member_path(s.member), :style => 'margin-top:10px' %>
             Score: <%= s.score %><br/>
             Submitted: <%= participant_submission_date(s.submission_date_utc) %>
