--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -19,11 +19,12 @@
       <p><strong>Overview of the results:</strong> <%= @results_overview %></p>
     <% end %>    
 
-		<% @challenge.scorecards.in_groups_of(2, false) do |scorecard_row| %>
+    <% @challenge.scorecards.in_groups_of(2, false) do |scorecard_row| %>
       <div class="row-fluid">
       	<% for s in scorecard_row %>
           <div class="placement well well-large span6">
-              <%= image_tag(s.member.profile_pic, :width => '82x82', :class => 'pull-left photo') %>
+              <%= cl_image_tag(s.member.profile_pic, :width => 82, :height => 82, :crop => :fill, 
+                :class => 'pull-left photo', :alt => s.member.name, :cdn_subdomain => true) %>
               <%= link_to s.member.name, member_path(s.member), :style => 'margin-top:10px' %>
               Score: <%= number_with_precision(s.score, :precision => 2) %><br/>
               Submitted: <%= participant_submission_date(s.submission_date_utc) %>
