--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -39,7 +39,8 @@
 
     	<% @community.leaderboard.each do |member| %>
       <div class="placement well">
-          <%= image_tag(member['profile_pic'], :width => '82x82', :class => 'pull-left photo') %>
+          <%= cl_image_tag(member['profile_pic'], :width => 82, :height => 82, :crop => :fill, 
+            :class => 'pull-left photo', :alt => member['username'], :cdn_subdomain => true) %>      
           <%= link_to member['username'], member_path(member['username']), :style => 'margin-top:10px' %>
           <% if member['country'] %><%= member['country'] %><br/><% end %>
           <%= member['points'] %> points<br/>
