--- a/app/views/judging/outstanding_reviews.html.erb
+++ b/app/views/judging/outstanding_reviews.html.erb
@@ -16,7 +16,8 @@
                 <div class="review well well-large">
                     <h3><%= link_to s.challenge_participant__r.challenge__r.name, challenge_path(s.challenge_participant__r.challenge__r.challenge_id), :target => '_blank' %></h3>
                     <div class="row-fluid">
-                        <%= image_tag(s.challenge_participant__r.member__r.profile_pic, :width => '75x75', :class => 'pull-left photo') %>
+                      <%= cl_image_tag(s.challenge_participant__r.member__r.profile_pic, :width => 75, :height => 75, :crop => :fill, 
+                        :class => 'pull-left photo', :alt => s.challenge_participant__r.member__r.name, :cdn_subdomain => true) %>
                         Member : <%= link_to s.challenge_participant__r.member__r.name, member_path(s.challenge_participant__r.member__r.name), :target => '_blank' %><br/>
                         Submitted : <%= participant_submission_date(Time.parse(s.challenge_participant__r.submitted_date).getutc) %>
                     </div>
