--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -19,7 +19,8 @@
     <div class="row-fluid">
       <div class="span4">
           <div class="placement well">
-              <%= image_tag(m.from__r.profile_pic, :width => '82x82', :class => 'pull-left photo') %>
+              <%= cl_image_tag(m.from__r.profile_pic, :width => 82, :height => 82, :crop => :fill, 
+                :class => 'pull-left photo', :alt => m.from__r.name, :cdn_subdomain => true) %>           
               <%= link_to m.from__r.name, member_path(m.from__r.name), :style => 'margin-top:10px' %>
               <%= format_date_time(DateTime.parse(m.createddate).getutc) %>
           </div>
