--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,7 +126,7 @@
                   <li><%= link_to 'Forums', '/forums' %></li>
                 </ul>
               </li>
-              <li><a href="http://blog.cloudspokes.com">Blog</a></li>
+              <li><a href="http://blog.cloudspokes.com" target="_blank">Blog</a></li>
               <% if current_user.nil? %>
                   <li><a href="#" data-toggle="modal" data-target="#register-modal">Register</a></li>
                   <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a></li>
@@ -352,7 +352,7 @@
   <div id="signup-success-modal" class="modal hide fade" tabindex="-1" role="dialog">
   <div class="modal-header"></div>
   <div class="modal-body">
-      <div class="title"><h1>Thanks for Registering!</h1></div>
+      <div class="title"><h1>THANKS FOR REGISTERING!</h1></div>
       <div class="content"></div><br/>
   </div>
   <div class="modal-footer"></div>
