--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -4,11 +4,11 @@
     <div class="banner">
       <div class="container">
         <div class="banner-unit">
-          <h1>A New Marketplace <br/>for Cloud Development</h1>
-          <h2>Connecting Businesses with a Worldwide Community of Cloud Experts</h2>
+          <h1>Distributed Innovation</h1>
+          <h2>Connecting businesses who need innovation and development with the world's best development and design community</h2>
 
           <div class="buttons">
-            <p><strong>73,835</strong> of the world's best minds competing</p>
+            <p><strong><%= number_with_delimiter(@platform_stats['members'], :delimiter => ',') %></strong> of the world's best minds competing</p>
             <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>Join The Team</span></span></a>
             <a class="learn-more" href="/how-it-works">Or Learn More</a>
           </div>
@@ -35,7 +35,7 @@
                         <li class="span4"><i class="icon-analytics"></i>Analytics</li>
                       </ul>
                       <div class="clear"></div>
-                      <p class="clear">The flexibility of cloud platforms has created a unique situation where, for the first time, dramatic innovation can occur with both the underlying technology model and how results are delivered to businesses. With more than 70,000+ experts from 100+ countries, the world can be your development partner. <a href="/what-we-do">Learn More</a></p>
+                      <p class="clear">The flexibility of cloud platforms has created a unique situation where, for the first time, dramatic innovation can occur with both the underlying technology model and how results are delivered to businesses. With more than <%= number_with_delimiter(@platform_stats['members'], :delimiter => ',') %> experts from 100+ countries, the world can be your development partner. <a href="/what-we-do">Learn More</a></p>
                     </div>
                 </div>
                 <div class="item">
@@ -46,7 +46,7 @@
                         <li class="span4"><i class="icon-resolve"></i>Solve Problems</li>
                         <li class="span4"><i class="icon-design"></i>Design Competitions</li>
                       </ul>
-                      <p class="clear">The flexibility of cloud platforms has created a unique situation where, for the first time, dramatic innovation can occur with both the underlying technology model and how results are delivered to businesses. With more than 70,000+ experts from 100+ countries, the world can be your development partner. <a href="/what-we-do">Learn More</a></p>
+                      <p class="clear">Do you love technology? Do you like winning? Welcome to an open market for your unique talents. Join now to develop new skills with real world assignments, learn from the work of others, and establish your street cred as skilled practitioner in the art and science of cloud development. <a href="/what-we-do">Learn More</a></p>
                     </div>
 
                 </div>
