--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -54,7 +54,7 @@
                     <table class="type featured"><tr><td><%= number_to_currency(@platform_stats['featured_member_money'], :precision => 0) %></td></tr></table>
                 </div>
 
-                <p><a href="/members/Chok68">Chok68</a> has been a CloudSpokes member for quite some time now and has quietly been one of our most consistent members. With a 92% submission rate and 20 total wins for over 11k chok68 isn't sneaking under the radar any more! With 2 big time first place wins in March, he was a clear choice for our April Member of the Month!</p>
+                <p>Since joining CloudSpokes in November of last year, Mithun AKA <a href="/members/callmekatootie">callmekatootie</a>a has been a total community superstar. Participating on the forums, competing in challenges and always being available to help out. Aside from that, Callmekatootie has been instrumental in providing consistency and best coding practices to our wear test app. All that adds up to make callmekatootie our August member of the month. Congrats!</p>
             </div>
             <div class="span6">
                 <div class="title"><h1>LEADERBOARD</h1></div>
