--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class="banner">
       <div class="container">
         <div class="banner-unit">
-          <h1>Distributed Innovation</h1>
+          <h1>A Marketplace for<br/>Cloud Development</h1>
           <h2>Connecting businesses who need innovation and development with the world's best development and design community</h2>
 
           <div class="buttons">
