--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -54,7 +54,7 @@
                     <table class="type featured"><tr><td><%= number_to_currency(@platform_stats['featured_member_money'], :precision => 0) %></td></tr></table>
                 </div>
 
-                <p>Since joining CloudSpokes in November of last year, Mithun AKA <a href="/members/callmekatootie">callmekatootie</a>a has been a total community superstar. Participating on the forums, competing in challenges and always being available to help out. Aside from that, Callmekatootie has been instrumental in providing consistency and best coding practices to our wear test app. All that adds up to make callmekatootie our August member of the month. Congrats!</p>
+                <p>Since joining CloudSpokes in November of last year, Mithun AKA <a href="/members/callmekatootie">callmekatootie</a> has been a total community superstar. Participating on the forums, competing in challenges and always being available to help out. Aside from that, Callmekatootie has been instrumental in providing consistency and best coding practices to our wear test app. All that adds up to make callmekatootie our August member of the month. Congrats!</p>
             </div>
             <div class="span6">
                 <div class="title"><h1>LEADERBOARD</h1></div>
