added turbo-sprockets-rails3 gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -160,12 +160,12 @@
               <div class="pull-left">
                   <h2>MAIN LINKS</h2>
                   <ul class="links">
-                      <li><%= link_to 'Home', main_app.root_path %></li>
                       <li><%= link_to 'Overview', '/overview' %></li>
                       <li><%= link_to 'What We Do', '/what-we-do' %></li>
                       <li><%= link_to 'How It Works', '/how-it-works' %></li>
                       <li><%= link_to 'About Us', '/about' %></li>
-                      <li><%= link_to 'Spokes', '/partners' %></li>
+                      <li><%= link_to 'Press', '/press' %></li>   
+                      <li><%= link_to 'Privacy & Terms', '/terms-of-service' %></li>                  
                       <li><%= link_to 'Contact Us', '/contact' %></li>
                   </ul>
               </div>
@@ -176,7 +176,7 @@
                       <li><%= link_to 'Dashboard', main_app.dashboard_path %></li>
                       <li><%= link_to 'Challenges', main_app.challenges_path %></li>
                       <li><%= link_to 'Leaderboard', main_app.leaderboard_path %></li>
-                      <li><%= link_to 'Blog', 'http://blog.cloudspokes.com' %></li>
+                      <li><%= link_to 'Blog', 'http://blog.cloudspokes.com', :target => '_blank' %></li>                         
                       <li><%= link_to 'FAQ', '/faq' %></li>
                       <li><%= link_to 'Help', '/help' %></li>
                       <li><%= link_to 'Status', 'http://status.cloudspokes.com', :target => '_blank' %></li>
@@ -186,9 +186,9 @@
               <div class="pull-left">
                   <h2>SPOKES</h2>
                   <ul class="links">
-                      <li><a href="http://mesh01.cloudspokes.com">MESH01</a></li>
-                      <li><a href="http://smartsheet.cloudspokes.com">Smartsheet</a></li>
-                      <li><a href="http://docusign.cloudspokes.com">Docusign</a></li>
+                      <li><a href="http://mesh01.cloudspokes.com" target="_blank">MESH01</a></li>
+                      <li><a href="http://smartsheet.cloudspokes.com" target="_blank">Smartsheet</a></li>
+                      <li><a href="http://docusign.cloudspokes.com" target="_blank">Docusign</a></li>
                   </ul>
               </div>
 
