--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -56,7 +56,7 @@
                   </div>
                   <div class="bottom">
                     <strong><%= number_to_currency(@member.total_money, :precision => 0) %></strong><br>
-                    <strong><%= number_with_delimiter(@member.total_points, :delimiter => ',') %></strong> Pts
+                    <strong><%= number_with_delimiter(@member.total_points, :delimiter => ',') %></strong>&nbsp;Pts
                   </div>
                 </div>
               </div>
