--- a/app/views/communities/leaderboard.html.erb
+++ b/app/views/communities/leaderboard.html.erb
@@ -6,7 +6,7 @@
     <div class="container">
 
         <div>
-            <div class="title" style="margin:0px 0px 0px 0px"><h1><%= @community.community.name.upcase %> LEADERBOARD</h1></div>
+            <div class="title"><h1><%= @community.community.name.upcase %> LEADERBOARD</h1></div>
         </div>
 
         <div class="row-fluid">
