reduced font size

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="banner-unit">
           <h1>A Marketplace for<br/>Cloud Development</h1>
-          <h2>Connecting businesses who need innovation and development with the world's best development and design community</h2>
+          <h2 style="font-size:18pt">Connecting businesses who need innovation and development<br/>with the world's best development and design community</h2>
 
           <div class="buttons">
             <p><strong><%= number_with_delimiter(@platform_stats['members'], :delimiter => ',') %></strong> of the world's best minds competing</p>
