--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,5 @@
 @import "datepicker/base";
 @import "datepicker/clean";
 @import "jquery.plupload.queue";
+@import "jquery.pnotify.default";
+@import "jquery.pnotify.default.icons";
