added call to register and login to launch modals on page load

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,15 @@
 
         <% flash.each do |key, msg| %>
         $.pnotify({ width: "400px", text: "<%= msg %>", type: "<%= key %>" });
-        <% end %>                
+        <% end %>      
+
+        <% if params[:show_login] %>
+        $('#login-modal').modal('show');
+        <% end %>
+
+        <% if params[:show_register] %>
+        $('#register-modal').modal('show');
+        <% end %>        
 
       });      
 
