--- a/app/views/layouts/madison.html.erb
+++ b/app/views/layouts/madison.html.erb
@@ -4,9 +4,14 @@
   <title>Madison</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+  <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+
   <%= javascript_include_tag "angular-resource.min" %>
+  <%= javascript_include_tag "angular/vendor/sortable.js" %>
+  <%= javascript_include_tag "angular/vendor/slider.js" %>
   <%= include_gon %>
   <%= javascript_include_tag "angular/madison" %>
   <%= javascript_include_tag "angular/services/madison_models" %>
